--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </section>
         <hr size="1px">
-        <h1>WORK EXPERIENCES</h1>
+        <h1 class="workex">WORK EXPERIENCES</h1>
         <section id="fuse"> 
             <img src="https://media-exp1.licdn.com/dms/image/C560BAQEm2lz6YmjqiA/company-logo_200_200/0/1599526819654?e=2159024400&v=beta&t=0TkPeCYRp_KSlfnf7dnC9uFD9ZG7T9zoQ9XyEStnxLw"
             class="kotak">
